# llm-demo

./: CLAUDE.md  mcp_demo_output.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: unit-test-writer.md
a2a/: README.md  __init__.py  agent_impl.py  base_agent.py  demo.py  demo_agents.py  message_broker.py  protocol.py  simple_demo.py
a2ui/: __init__.py  agent.py  builder.py  demo.py  protocol.py  renderer.py  simple_demo.py
ai/a2ui/: PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  __init__.py  api_server.py  config.py  demo.py  demo_agents.py  examples.py  run.py  test_client.py  verify.py  web_agent.py
ai/a2ui/static/: index.html
ai/langchain/: README.md  demo.py  langchain_demo.py  quickstart.md  test_client.py
ai/langgraph/: demo.py  langgraph_hil_demo.py  langgraph_mcp_demo.py  langgraph_memory_demo.py  langgraph_multi_agent_demo.py  langgraph_thinking.py  langgraph_workflows.py
ai/mcp/: QUICKSTART.py  README.md  __init__.py  demo.py  mcp_client.py  mcp_server.py
ai/skills/: QUICKSTART.md  README.md  __init__.py  base_skill.py  client_examples.py  demo.py  example_skills.py  simple_demo.py  skill_chain.py  skill_executor.py  skill_registry.py  test_skills.py  web_service.py
ai/skills/feishu_document_reader/: README.md  __init__.py  feishu_reader_skill.py  test_skill.py  web_demo.py
ai/subagent/: QUICKSTART.md  README.md  __init__.py  base_subagent.py  client_examples.py  coordinator_agent.py  demo.py  simple_demo.py  specialized_agents.py  subagent_registry.py  test_subagent.py  web_service.py
leetcode/: demo.py
(+1 files in other folders)
