[project]
name = "llm-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "ipython>=9.8.0",
    "langchain-core>=1.2.6",
    "langchain-anthropic>=1.3.0",
    "rich>=14.2.0",
]
